# international-delivery-service

./: .env.EXAMPLE  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 3239cbfcd8cb_.py
app/: __init__.py  app.py  asgi.py  celery_worker.py  database_connector.py  db.py  models.py  repositories.py  settings.py
app/middleware/: session_middleware.py
app/pydantic_models/: pydantic_models.py
app/routers/: parcel_router.py
app/services/: currency_service.py  logger_service.py
