[tool.poetry]
name = "international-delivery-service"
version = "0.1.0"
description = ""
authors = ["Rinat Kurbanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
aioredis = "^2.0.1"
requests = "^2.31.0"
apscheduler = "^3.10.4"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.0"
mysqlclient = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
aiologger = "^0.7.0"
aiofiles = "^23.2.1"
asyncmy = "^0.2.9"
pika = "^1.3.2"
alembic = "^1.13.1"
sqlmodel = "^0.0.14"
sqlalchemy-utils = "^0.41.1"
aio-pika = "^9.3.1"
aiohttp = "^3.9.1"
redis = "4.3.4"
celery = "5.3.4"
flower = "^2.0.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
